--- a/src/app/pages/crud-form/crud-form.component.html
+++ b/src/app/pages/crud-form/crud-form.component.html
@@ -14,7 +14,7 @@
                     <mat-label>Especialidade<span class="required">*</span></mat-label>
                     <mat-select>
                         @for (specialty of specialties; track specialty.especialidade) {
-                            <mat-option >
+                            <mat-option [value]="specialty.especialidade">
                                 {{ specialty.especialidade }}
                             </mat-option>
                         }
@@ -84,7 +84,7 @@
                 </button>
             </div>
             <div>
-                <button mat-fab extended color="primary">
+                <button mat-fab extended color="primary" (click)="onSave()">
                     <mat-icon>check</mat-icon>
                     Salvar Cadastro
                 </button>
