--- a/src/app/pages/crud-list/crud-list.component.html
+++ b/src/app/pages/crud-list/crud-list.component.html
@@ -5,35 +5,35 @@
                 <h3>Lista de Profissionais</h3>
             </section>
             <div class="table-container">
-                <table mat-table [dataSource]="profissionais" >
+                <table mat-table [dataSource]="dataSource" >
                     <ng-container matColumnDef="name">
                       <th mat-header-cell *matHeaderCellDef> Nome </th>
-                      <td mat-cell *matCellDef="let profissional"> {{ profissional.name }} </td>
+                      <td mat-cell *matCellDef="let element"> {{ element.name }} </td>
                     </ng-container>
 
                     <ng-container matColumnDef="specialty">
                       <th mat-header-cell *matHeaderCellDef> Especialidade </th>
-                      <td mat-cell *matCellDef="let profissional"> {{ profissional.specialty }} </td>
+                      <td mat-cell *matCellDef="let element"> {{ element.specialty }} </td>
                     </ng-container>
 
                     <ng-container matColumnDef="crm">
                       <th mat-header-cell *matHeaderCellDef> CRM </th>
-                      <td mat-cell *matCellDef="let profissional"> {{ profissional.crm }} </td>
+                      <td mat-cell *matCellDef="let element"> {{ element.crm }} </td>
                     </ng-container>
 
                     <ng-container matColumnDef="phone">
                       <th mat-header-cell *matHeaderCellDef> Contato </th>
-                      <td mat-cell *matCellDef="let profissional"> {{ profissional.phone }} </td>
+                      <td mat-cell *matCellDef="let element"> {{ element.phone }} </td>
                     </ng-container>
 
                     <ng-container matColumnDef="status">
                         <th mat-header-cell *matHeaderCellDef> Status </th>
-                        <td mat-cell *matCellDef="let profissional"> {{ profissional.status }} </td>
+                        <td mat-cell *matCellDef="let element"> {{ element.status }} </td>
                     </ng-container>
 
                     <ng-container matColumnDef="actions">
                         <th mat-header-cell *matHeaderCellDef></th>
-                        <td mat-cell *matCellDef="let profissional">
+                        <td mat-cell *matCellDef="let element">
                         <button mat-icon-button color="secondary" matTooltip="Ver" matTooltipPosition="below">
                             <mat-icon>visibility</mat-icon>
                         </button>
